--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # Database
-spring.datasource.url=jdbc:mysql://localhost:3306/dbc
-spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.url=jdbc:mysql://den1.mysql2.gear.host/dbccompany
+spring.datasource.username=dbccompany
+spring.datasource.password=Jk75_D7v8?yf
 
 spring.jpa.hibernate.ddl-auto=update
