--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,57 @@
-/target/
+# Compiled class file
+*.class/
+
+# Log file
+*.log/
+
+# BlueJ files
+*.ctxt/
+
+# Mobile Tools for Java (J2ME)
+.mtj/
+.tmp/
+
+# virtual machine
+hs_err_pid*
+
+# Eclipse
+.project/
+.classpath/
 .settings/
+bin/
+
+# IntelliJ
+.idea
+*.ipr
+*.iml
+*.iws
+
+# NetBeans
+nb-configuration.xml
+
+# Visual Studio Code
+.vscode/
+
+# OSX
+.DS_Store/
+
+# Vim
+*.swp
+*.swo
+
+# patch
+*.orig
+*.rej
+
+# Maven
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+release.properties
+
+lsp/
+
+.java-version/
+
+*.sts4-cache/
